<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <include layout="@layout/header_setting" />

    <LinearLayout
        android:id="@+id/provider_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_aboutus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/my_suggestion_logo"
                android:drawablePadding="6dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/aboutus"
                android:textColor="@color/setting_txt"
                android:textSize="16sp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="37dp"
            android:layout_marginTop="20dp" >

            <EditText
                android:id="@+id/tv_login_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="#00000000"
                android:gravity="left|center_vertical"
                android:hint="@string/login_account"
                android:imeOptions="actionNext"
                android:inputType="phone|textUri"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/darkkhaki"
                android:textSize="17sp" />

            <Button
                android:id="@+id/bt_clear_login_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:background="@drawable/login_edit_text_clear_btn_selector"
                android:visibility="invisible" />
        </FrameLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="37dp"
            android:background="@drawable/login_line"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="37dp"
            android:layout_marginTop="11dp" >

            <EditText
                android:id="@+id/tv_login_sms"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#00000000"
                android:gravity="left|center_vertical"
                android:hint="@string/sms_check_num"
                android:imeOptions="actionDone"
                android:inputType="number|textPassword"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/darkkhaki"
                android:textColorLink="@color/black"
                android:textSize="17sp" />

            <LinearLayout
                android:id="@+id/button_sms"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/login_bottom_btn_selector"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/tv_button_sms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/smschecknum"
                    android:textColor="#E22B2B"
                    android:textSize="19sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_login"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_bottom_btn_selector"
            android:gravity="center"
            android:minHeight="39dp" >

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/login_login"
                android:textColor="#E22B2B"
                android:textSize="19sp"
                android:textStyle="bold" />

            <com.anynet.wifiworld.view.AnimationDot
                android:id="@+id/login_animation_dot"
                android:layout_width="20dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:clickable="false"
                android:gravity="left|bottom"
                android:textColor="#E22B2B"
                android:textSize="19sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>